# MiniC_compiler

./: .gitignore  CMakeLists.txt  README.md  bad_2  build_and_report.py  input.minic
include/: error_reporter.h  lexer.h  parser.h
src/: error_reporter.c  lexer.c  main.c  parser.c
tests/: CMakeLists.txt  test_error_reporter.c
